// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow Row should be clickable when showContributorAssignment set to true 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Professor J Researcher
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              The University of Queensland (uqresearcher)
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow Row should not be clickable when showContributorAssignment set to false 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(Tooltip)
          title="You are not able to edit this row"
        >
          <pure(LockIcon) />
        </WithStyles(Tooltip)>
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Professor J Researcher
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              The University of Queensland (uqresearcher)
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(Tooltip)
          title="You are not able to edit this row"
        >
          <pure(LockIcon) />
        </WithStyles(Tooltip)>
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              A. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders only name and delete button for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (A. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(Tooltip)
          title="You are not able to edit this row"
        >
          <pure(LockIcon) />
        </WithStyles(Tooltip)>
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              A. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor set, renders reorder buttons, contributor assignment, and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(PersonOutlinedIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Professor J Researcher
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              The University of Queensland (uqresearcher)
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record up the order"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Move record up the order"
            disabled={false}
            onClick={[Function]}
          >
            <pure(KeyboardArrowUpIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Move record down the order"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Move record down the order"
            disabled={false}
            onClick={[Function]}
          >
            <pure(KeyboardArrowDownIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set and set as selected for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and contributor with author details set, contributor author details, and delete button 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(Tooltip)
          title="You are not able to edit this row"
        >
          <pure(LockIcon) />
        </WithStyles(Tooltip)>
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Professor J Researcher
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " ",
                }
              }
              noWrap={true}
              variant="caption"
            >
              The University of Queensland (uqresearcher)
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={12}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Investigator
            </WithStyles(Typography)>
          }
          secondary=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow a row with index and creator with creator role set and set as selected for mobile view 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (J. Smith) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              J. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={12}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Investigator
            </WithStyles(Typography)>
          }
          secondary=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow should assign contributor 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "selected",
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              test
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={5}
        xs={12}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary selected",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Somewhere
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": " selected",
                }
              }
              noWrap={true}
              variant="caption"
            >
              Organisation type: Library/Museum/Public Gallery
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "selected",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow should call callback functions on ListItem 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (test) to assign it to you"
    classes={
      Object {
        "root": "",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": undefined,
          }
        }
      >
        <pure(PersonIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "undefined undefined",
                }
              }
              noWrap={true}
              variant="body2"
            >
              test
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "undefined",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={5}
        xs={12}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "test-class-1 undefined",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Somewhere
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "test-class-2 undefined",
                }
              }
              noWrap={true}
              variant="caption"
            >
              Organisation type: Library/Museum/Public Gallery
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "undefined",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow should have a proper style generator 1`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should have a proper style generator 2`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should have a proper style generator 3`] = `
Object {
  "disabledListItem": Object {
    "&:focus": Object {
      "outline": "none !important",
    },
    "margin": "0",
    "outline": "none !important",
    "width": "100%",
  },
  "hideIcon": Object {
    "display": "none",
  },
  "highlighted": Object {
    "borderLeft": "5px solid red",
  },
  "identifierName": Object {
    "fontSize": "test4",
    "marginTop": 8,
  },
  "identifierSubtitle": Object {
    "fontSize": "test4",
  },
  "listContainer": Object {
    "padding": "0",
  },
  "listItem": Object {
    "borderLeft": "5px solid transparent",
    "cursor": "pointer",
    "margin": "0",
    "width": "100%",
  },
  "primary": Object {
    "fontSize": "test3",
  },
  "rowSelected": Object {
    "backgroundColor": undefined,
  },
  "selected": Object {
    "color": "white !important",
    "fontWeight": "test2",
  },
}
`;

exports[`Component ContributorRow should render row as required 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label="Select this record (Test) to assign it to you"
    classes={
      Object {
        "root": "highlighted",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <WithStyles(Tooltip)
          title="You are not able to edit this row"
        >
          <pure(LockIcon) />
        </WithStyles(Tooltip)>
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "undefined ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              Test
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First  listed contributor
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
        title="Remove this record"
      >
        <span>
          <WithStyles(IconButton)
            aria-label="Remove this record"
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;

exports[`Component ContributorRow should render row with UQ affiiliation and missing author title 1`] = `
<WithStyles(Grid)
  classes={
    Object {
      "container": undefined,
    }
  }
  container={true}
>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={10}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "undefined",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={5}
    xs={12}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "test1 undefined",
            }
          }
          noWrap={true}
          variant="body2"
        >
          undefined
        </WithStyles(Typography)>
      }
      secondary=""
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Component ContributorRow should render row with UQ affiiliation and missing author title in non-xs width 1`] = `
<WithStyles(Grid)
  classes={
    Object {
      "container": undefined,
    }
  }
  container={true}
>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={10}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "undefined",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={5}
    xs={12}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "test undefined",
            }
          }
          noWrap={true}
          variant="body2"
        >
          undefined
        </WithStyles(Typography)>
      }
      secondary=""
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Component ContributorRow should render row with non-UQ affiiliation and missing org type 1`] = `
<WithStyles(Grid)
  classes={
    Object {
      "container": undefined,
    }
  }
  container={true}
>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={10}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "undefined",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={5}
    xs={12}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "primary undefined",
            }
          }
          noWrap={true}
          variant="body2"
        >
          undefined
        </WithStyles(Typography)>
      }
      secondary=""
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Component ContributorRow should render row with student author title in xs width 1`] = `
<WithStyles(Grid)
  classes={
    Object {
      "container": undefined,
    }
  }
  container={true}
>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={10}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "undefined",
            }
          }
          noWrap={true}
          variant="caption"
        >
          First  listed contributor
        </WithStyles(Typography)>
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={10}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "test2 undefined",
            }
          }
          noWrap={true}
          variant="body2"
        >
          Ms undefined
        </WithStyles(Typography)>
      }
      secondary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "test3 undefined",
            }
          }
          noWrap={true}
          variant="caption"
        >
          The University of Queensland (studentUser)
        </WithStyles(Typography)>
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={5}
    sm={5}
    xs={12}
  >
    <WithStyles(ListItemText)
      disableTypography={true}
      primary={
        <WithStyles(Typography)
          classes={
            Object {
              "root": "test2 undefined",
            }
          }
          noWrap={true}
          variant="body2"
        >
          role
        </WithStyles(Typography)>
      }
      secondary=""
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Component ContributorRow should render with missing aria label if selectHint prop is falsy 1`] = `
<Fragment>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure?",
        "confirmationTitle": "Confirmation",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <WithStyles(ListItem)
    aria-label={null}
    classes={
      Object {
        "root": "listItem",
      }
    }
    divider={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(ListItemIcon)
        classes={
          Object {
            "root": "",
          }
        }
      >
        <pure(LockIcon) />
      </WithStyles(ListItemIcon)>
    </Hidden>
    <WithStyles(Grid)
      classes={
        Object {
          "container": undefined,
        }
      }
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={5}
        sm={5}
        xs={10}
      >
        <WithStyles(ListItemText)
          disableTypography={true}
          primary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "primary ",
                }
              }
              noWrap={true}
              variant="body2"
            >
              A. Smith
            </WithStyles(Typography)>
          }
          secondary={
            <WithStyles(Typography)
              classes={
                Object {
                  "root": "",
                }
              }
              noWrap={true}
              variant="caption"
            >
              First undefined
            </WithStyles(Typography)>
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(ListItemSecondaryAction)>
      <WithStyles(Tooltip)
        disableFocusListener={false}
        disableHoverListener={false}
        disableTouchListener={false}
      >
        <span>
          <WithStyles(IconButton)
            disabled={false}
            onClick={[Function]}
          >
            <pure(DeleteIcon)
              classes={
                Object {
                  "root": "",
                }
              }
            />
          </WithStyles(IconButton)>
        </span>
      </WithStyles(Tooltip)>
    </WithStyles(ListItemSecondaryAction)>
  </WithStyles(ListItem)>
</Fragment>
`;
